# taskflow-mcp-server

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: bootstrap.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: artifacts.py  audit.py  jobs.py  keys.py  runs.py  stream.py
backend/app/dev/: allowlist.example.yaml  allowlist.yaml
backend/app/engine/: dag.py  log_bus.py  policies.py  run_engine.py  worker.py
backend/app/mcp_server/: __main__.py  auth.py  server.py  tools.py
backend/app/services/: artifacts.py  audit.py  keys.py
backend/tests/: conftest.py  test_allowlist.py  test_audit_chain.py  test_dag.py  test_job_delete_api.py  test_rate_limit.py  test_run_engine_cancel.py  test_run_logs_api.py  test_scope.py  test_worker.py
docs/: 00-overview.md  01-design-goals.md  02-business-rules.md  03-system-spec.md  README.en.md  README.md  getting-started.en.md  getting-started.md  mcp-api.en.md  mcp-api.md  operations.en.md  operations.md  rest-api.en.md  rest-api.md  security.en.md  security.md  troubleshooting.en.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  sse.ts
frontend/src/components/: Sidebar.tsx  Toasts.tsx  Topbar.tsx  TweaksPanel.tsx
frontend/src/i18n/: translations.ts  useT.ts
frontend/src/screens/: Artifacts.tsx  Audit.tsx  (+6 more)
scripts/: start-bg.sh  status.sh  stop.sh
(+3 files in other folders)
